<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/register_screen_background"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-20dp"
        android:src="@mipmap/lavamatra_resize"
        android:layout_weight="0.41" />

    <TextView
        android:id="@+id/loginLogoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@null"
        android:layout_marginTop="-20dp"
        android:text="@string/app_name_login"
        android:textColor="#630202"
        android:textSize="50dp"
        android:layout_weight="0.25" />

    <TextView
        android:id="@+id/loginTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-55dp"
        android:text="@string/tag_name_login"
        android:textColor="#630202"
        android:textSize="44dp"
        android:layout_weight="0.23" />

    <TextView
        android:id="@+id/loginSecondTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/second_tag_name_login"
        android:textColor="#630202"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editFullName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edittext"
            android:layout_margin="5dp"
            android:gravity="center"
            android:hint="@string/user_name"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray" />

        <Spinner
            android:id="@+id/editInitiatedName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:entries="@array/relationship_values"
            android:background="@drawable/rounded_edittext"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"/>


        <EditText
            android:id="@+id/editEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edittext"
            android:layout_margin="5dp"
            android:gravity="center"
            android:hint="@string/user_email"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edittext"
            android:layout_margin="5dp"
            android:gravity="center"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/editPlace"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edittext"
            android:layout_margin="5dp"
            android:gravity="center"
            android:hint="@string/user_place"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edittext"
            android:layout_margin="5dp"
            android:gravity="center"
            android:hint="@string/user_phone"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray" />

    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="10dp"
        android:text="REGISTER"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/goToLoginButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="Login"
        android:textAllCaps="false"
        android:textSize="15dp" />
</LinearLayout>
